feat: adding basic ws support to force reload on webpage

--- a/index.html.hbs
+++ b/index.html.hbs
@@ -7,6 +7,7 @@
     <title>Bank Account Tracker</title>
 
     <link rel="stylesheet" href="styles.css">
+	<script type="text/javascript" src="script.js" defer></script>
 </head>
 
 <body>
@@ -45,6 +46,7 @@
 	        <h1>Technical informations</h1>
 			<p>Last check: {{formatTimestamp lastCheckTimestamp}}</p>
 			<p>Last transaction: {{formatTimestamp lastTransactionTimestamp}}</p>
+			<button id="reload">Reload</button>
 	    </div>
     </div>
 <div>
