--- a/index.html.hbs
+++ b/index.html.hbs
@@ -17,14 +17,15 @@
         <ul class="history-list">
           {{#each transactions~}}
 	        <li>
-				<span class="action {{#if (isDeposit this.action)}}deposit{{else}}withdrawal{{/if}}">{{#if (isDeposit this.action)}}+{{else}}-{{/if}}</span>
-				{{formatBalance this.amount}} by <span class="user">{{this.user}}</span> — {{formatTimestamp this.timestamp}}
+				<span class="action{{#if (isDeposit this.action)}} deposit{{else}} withdrawal{{/if}}">{{#if (isDeposit this.action)}}+{{else}}-{{/if}}</span>
+				<span class="amount{{#if (isAmountImportant this.amount)}} large{{/if}}">{{formatBalance this.amount}}</span>
+				by <span class="user">{{this.user}}</span> — {{formatTimestamp this.timestamp}}
 			</li>
           {{~/each}}
         </ul>
     </div>
 	<div id="additional-info">
-	    <div class="box balance">
+	    <div id="balance" class="box">
 	        <h1>Balance</h1>
 
 	        <p class="total">Total: {{formatBalance balance}}</p>
@@ -32,13 +33,14 @@
 			<div class="members">
 		        <h2>Members</h2>
 
-		        <ul>
+		        <ol>
 		          {{#each users~}}
-		            <li>
-						<span class="user">{{this.name}}</span>: {{formatBalance this.commonBalance}} + {{formatBalance this.personalBalance}}
+		            <li data-username="{{this.name}}">
+						<span class="user">{{this.name}}</span>:
+						<span class="common-balance{{#if (isAmountNegative this.commonBalance)}} negative{{/if}}">{{formatBalance this.commonBalance}}</span>
 					</li>
 		          {{~/each}}
-		        </ul>
+		        </ol>
 			</div>
 	    </div>
 
@@ -46,6 +48,8 @@
 	        <h1>Technical informations</h1>
 			<p>Last check: {{formatTimestamp lastCheckTimestamp}}</p>
 			<p>Last transaction: {{formatTimestamp lastTransactionTimestamp}}</p>
+			<p id="drift">Drift: <span class="{{#if (isDriftImportant drift)}}important{{/if}}">{{drift}}</span></p>
+			<p id="websocket-info">WS: <span>connecting</span></p>
 			<button id="reload">Reload</button>
 	    </div>
     </div>
