feat: add bank's max balance and completion %

--- a/index.html.hbs
+++ b/index.html.hbs
@@ -33,7 +33,7 @@
 	    <div id="balance" class="box">
 	        <h1>Balance</h1>
 
-	        <p class="total">Total: {{formatBalance balance}}</p>
+	        <p class="total">Total: {{formatBalance balance}} / {{formatBalance maxBalance}} - ({{calculPercentage balance maxBalance}}%)</p>
 
 			<div class="members">
 		        <h2>Members</h2>
