--- a/index.html.hbs
+++ b/index.html.hbs
@@ -34,7 +34,8 @@
 	        <h1>Balance</h1>
 
 	        <p class="total">Total: {{formatBalance balance}} / {{formatBalance maxBalance}} - ({{calculPercentage balance maxBalance}}%)</p>
-
+			<p class="total">Bank interest: {{ formatBalance bankInterest }}</p>
+			
 			<div class="members">
 		        <h2>Members</h2>
 
