--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ button {
 #history {
   width: 50%;
 
-  #one-day {
+  #last-day {
     table tr {
       font-size: 1.2rem;
       line-height: 1rem;
