--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="../static/style.css">
   <!-- <script type="text/javascript" src="../static/script.js" defer></script> -->
+  <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
 </head>
 
 <body>
@@ -18,15 +19,11 @@
         <h1>Last 24h overview</h1>
         <table class="last-day-list">
           <tbody>
-            {% for user in users %}
+            {% for user in deltas %}
             <tr>
               <td class="user">{{user.name}}</td>
               <td class="delta{% if user.delta < 0.0 %} negative{% endif %}">
-<<<<<<< Updated upstream
-                {% if user.delta > 0.0 %}+{% endif %} {{self.format_number(*user.delta)}}
-=======
-                {% if user.delta > 0.0 %}+{% endif %} {{self.format_number(user.delta)}} ¤
->>>>>>> Stashed changes
+                {% if user.delta > 0.0 %}+{% endif %} {{self.format_number(*user.delta)}} ¤
               </td>
             </tr>
             {% endfor %}
@@ -39,49 +36,35 @@
         <table class="history-list">
           <tbody>
             {% for (timestamp, operation) in operations %}
-              <tr>
-                {% match operation %}
-                  {% when Operation::PlayerPurse {amount, username, repeat_count} %}
-<<<<<<< Updated upstream
-                    <td class="action{% if *amount > 0.0 %} deposit{% else %} withdrawal{% endif %}">
-                      {% if *amount > 0.0 %} + {% else %} - {% endif %}</td>
-                    <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}}</td>
-=======
-                    <td class="action{% if amount > crate::models::ZERO_REF %} deposit{% else %} withdrawal{% endif %}">
-                      {% if amount > crate::models::ZERO_REF %} + {% else %} - {% endif %}</td>
-                    <td class="amount{% if amount > crate::models::FIVE_M_REF %} large{% endif %}">{{self.format_number(amount)}} ¤</td>
->>>>>>> Stashed changes
-                    <td class="user">{{username}}</td>
-                    <td>{{self.format_timestamp(**timestamp)}}</td>
+            <tr>
+              {% match operation %}
+              {% when Operation::PlayerPurse {amount, username, repeat_count} %}
+              <td class="action{% if *amount > 0.0 %} deposit{% else %} withdrawal{% endif %}">
+                {% if *amount > 0.0 %} + {% else %} - {% endif %}</td>
+              <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}} ¤</td>
+              <td class="user">{{username}}</td>
+              <td>{{self.format_timestamp(**timestamp)}}</td>
 
-                  {% when Operation::BankInterests {amount} %}
-                    <td class="action deposit">+</td>
-<<<<<<< Updated upstream
-                    <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}}</td>
-=======
-                    <td class="amount{% if amount > crate::models::FIVE_M_REF %} large{% endif %}">{{self.format_number(amount)}} ¤</td>
->>>>>>> Stashed changes
-                    <td class="user">Bank Interests</td>
-                    <td>{{self.format_timestamp(**timestamp)}}</td>
+              {% when Operation::BankInterests {amount} %}
+              <td class="action deposit">+</td>
+              <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}} ¤</td>
+              <td class="user">Bank Interests</td>
+              <td>{{self.format_timestamp(**timestamp)}}</td>
 
-                  {% when Operation::PlayerTransfer {amount, receiver, sender, repeat_count} %}
-                    <td class="action transfer">⬌</td>
-<<<<<<< Updated upstream
-                    <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}}</td>
-=======
-                    <td class="amount{% if amount > crate::models::FIVE_M_REF %} large{% endif %}">{{self.format_number(amount)}} ¤</td>
->>>>>>> Stashed changes
-                    <td class="user">{{sender}}</td>
-                    <td class="user">{{receiver}}</td>
-                    <td>{{self.format_timestamp(**timestamp)}}</td>
+              {% when Operation::PlayerTransfer {amount, receiver, sender, repeat_count} %}
+              <td class="action transfer">⬌</td>
+              <td class="amount{% if *amount > 5_000_000.0 %} large{% endif %}">{{self.format_number(**amount)}}</td>
+              <td class="user">{{sender}}</td>
+              <td class="user">{{receiver}}</td>
+              <td>{{self.format_timestamp(**timestamp)}}</td>
 
-                  {% when Operation::WeirdWaypoint %}
-                    <td class="action transfer">⬌</td>
-                    <td class="amount">Warning</td>
-                    <td class="user">Weird waypoint</td>
-                    <td>{{self.format_timestamp(**timestamp)}}</td>
-                {% endmatch %}
-              </tr>
+              {% when Operation::WeirdWaypoint %}
+              <td class="action transfer">⬌</td>
+              <td class="amount">Warning</td>
+              <td class="user">Weird waypoint</td>
+              <td>{{self.format_timestamp(**timestamp)}}</td>
+              {% endmatch %}
+            </tr>
             {% endfor %}
           </tbody>
         </table>
@@ -91,31 +74,18 @@
     </div>
     <div id="additional-info">
       <div id="balance" class="box">
-<<<<<<< Updated upstream
-        <p class="balance-info">Balance: {{self.format_number(*balance)}} ({{completion_percentage}})</p>
-        <p class="balance-info additional">Max balance: {{max_balance}}</p>
-
-        <p class="balance-info">Interests: {{self.format_number(*bank_interests)}}</p>
-=======
-        <p class="balance-info">Balance: {{self.format_number(balance)}} ¤ ({{completion_percentage}})</p>
+        <p class="balance-info">Balance: {{self.format_number(*balance)}} ¤ ({{completion_percentage}})</p>
         <p class="balance-info additional">Max balance: {{max_balance}} ¤</p>
-
-        <p class="balance-info">Interests: {{self.format_number(bank_interests)}} ¤</p>
->>>>>>> Stashed changes
-
+        <p class="balance-info">Interests: {{self.format_number(*bank_interests)}} ¤</p>
         <div class="members">
           <h2>Members</h2>
-
           <table>
             <tbody>
               {% for user in users %}
               <tr data-username="{{user.name}}">
                 <td class="user">{{user.name}}</td>
-<<<<<<< Updated upstream
-                <td class="common-balance{% if user.balance < 0.0 %} negative{% endif %}">{{self.format_number(*user.balance)}}</td>
-=======
-                <td class="common-balance{% if user.balance < 0.0 %} negative{% endif %}">{{self.format_number(user.balance)}} ¤</td>
->>>>>>> Stashed changes
+                <td class="common-balance{% if user.balance < 0.0 %} negative{% endif %}">
+                  {{self.format_number(*user.balance)}} ¤</td>
               </tr>
               {% endfor %}
             </tbody>
@@ -135,20 +105,20 @@
 
           <div>
             <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required>
+            <input type="number" id="amount" name="amount" required disabled>
           </div>
 
           <div>
             <label for="from-user">From:</label>
-            <input type="text" list="users-list" id="from-user" name="from-user" required>
+            <input type="text" list="users-list" id="from-user" name="from-user" required disabled>
           </div>
 
           <div>
             <label for="to-user">To:</label>
-            <input type="text" list="users-list" id="to-user" name="to-user" required>
+            <input type="text" list="users-list" id="to-user" name="to-user" required disabled>
           </div>
 
-          <button id="transfer">Transfer</button>
+          <button id="transfer" disabled>Transfer</button>
         </form>
         <span id="transfer-logs"></span>
       </div>
